feat: added program metadata